--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -3,6 +3,7 @@ excluded: # paths to ignore during linting. Takes precedence over `included`.
   - Pods
   
 disabled_rules:
+  - trailing_whitespace
   - force_cast
   - colon
   - switch_case_alignment
