--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,4 +1,4 @@
-excluded: # paths to ignore during linting. Takes precedence over `included`.
+excluded:
   - Carthage
   - Pods
   
@@ -9,6 +9,7 @@ disabled_rules:
   - switch_case_alignment
   - redundant_string_enum_value
   - closure_parameter_position
+  
 line_length: 140
 
 #$ swiftlint autocorrect
