--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,5 @@ jobs:
       - name: run-ghrs
         uses: jgehrcke/github-repo-stats@v1.1.0
         with: 
-          repository: https://github.com/siuzanna/Movie 
-          ghtoken: ${{ secrets.ghrs_github_api_token }}
+          repository: siuzanna/Movie 
+          ghtoken: ${{ secrets.repodata }}
