--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
         uses: jgehrcke/github-repo-stats@v1.1.0
         with: 
           repository: siuzanna/Movie 
-          ghtoken: ${{ secrets.repodata }}
+          ghtoken: ${{ secrets.ghrs_github_api_token }}
